Overflow X fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,6 +9,7 @@
 
 body {
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 h1,
